# feedie

./: CHANGELOG.md  Cargo.toml  README.md  manifest.json
.github/workflows/: ci.yml  linux-release.yml  macos-release.yml  windows-release.yml
assets/: Feedie.icns
crates/app_gui/: Cargo.toml  build.rs
crates/app_gui/i18n/de-DE/: main.ftl
crates/app_gui/i18n/en-US/: main.ftl
crates/app_gui/i18n/es-ES/: main.ftl
crates/app_gui/i18n/fr-FR/: main.ftl
crates/app_gui/i18n/nl-NL/: main.ftl
crates/app_gui/i18n/sv-SE/: main.ftl
crates/app_gui/src/: app.rs  export.rs  i18n.rs  main.rs  manifest.rs  model.rs  roboflow.rs  settings_store.rs  util.rs
crates/app_gui/src/app/: cache.rs  folder.rs  frame.rs  preview.rs  results.rs  selection.rs  settings.rs  thumbnails.rs
crates/effnet_train/: Cargo.toml
crates/effnet_train/src/: main.rs
crates/feeder_core/: Cargo.toml
crates/feeder_core/src/: lib.rs
docs/: en.html  index.html  script.js  styles.css
installer/: FeedieInstaller.iss
models/: feeder-labels.csv
runtime/windows/: README.txt
scripts/: build_appimage.sh  ci.ps1
specs/: product-spec.md  scenarios.md  tasks.md
tests/: e2e_spec.rs
