[package]
name = "app_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.0"
egui_extras = { version = "0.33.0", features = ["image"] }
feeder_core = { version = "0.1.0", path = "../feeder_core" }
image = "0.25.8"
rfd = "0.15.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.132"
urlencoding = "2.1.3"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.23.0"
