[package]
name = "app_gui"
version = "1.2.0"
edition = "2024"
build = "build.rs"
default-run = "app_gui"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.0"
egui_extras = { version = "0.33.0", features = ["image"] }
feeder_core = { version = "0.1.0", path = "../feeder_core" }
image = "0.25.8"
rfd = "0.15.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.132"
urlencoding = "2.1.3"
chrono = { version = "0.4", features = ["clock"] }
csv = "1.3"
arboard = "3.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
directories-next = "2.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3.23.0"
sha2 = "0.10"
hex = "0.4"
i18n-embed = { version = "0.14", features = ["desktop-requester"] }
fluent-templates = "0.13"
unic-langid = "0.9"
sys-locale = "0.3"

[[bin]]
name = "FeedieUpdater"
path = "src/bin/feedie_updater.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
rstest = "0.26.1"

[package.metadata.bundle]
name = "Feedie"
identifier = "nl.feedie.app"
version = "1.2.0"
short_description = "Efficiënte triage voor voederhuiscamera's"
copyright = "Copyright (c) 2025 Klaas"
resources = [
    "models",
    "manifest.json",
    "assets/Feedie-banner.png",
]
icon = ["assets/Feedie.icns"]
category = "public.app-category.photography"
