[package]
name = "effnet_train"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
feeder_core = { path = "../feeder_core" }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
