[package]
name = "feeder_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
csv = "1.4.0"
image = "0.25.8"
safetensors = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
