[package]
name = "feeder_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
csv = "1.4.0"
fast_image_resize = "5.4.0"
image = "0.25.8"
rayon = "1.10.0"
safetensors = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
walkdir = "2.5.0"
zune-jpeg = "0.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", features = ["accelerate"] }
candle-nn = { version = "0.9.1", features = ["accelerate"] }
candle-transformers = { version = "0.9.1", features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9.1", features = ["mkl"] }
candle-nn = { version = "0.9.1", features = ["mkl"] }
candle-transformers = { version = "0.9.1", features = ["mkl"] }

[dev-dependencies]
tempfile = "3.23.0"
